src/snapshots/afrotd__parser__tests__interpreation_html_6.5.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            B1 gibt ein gültiges oder ungültiges Fair Catch-Signal und berührt
            den Punt nicht, aber während der unberührte Ball im Spielfeld frei
            ist, blockt er einen Gegner (a) im Spielfeld; (b) in der Endzone
            des Receivers.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Wenn der Ball die neutrale Zone überquert und Team B in
                Ballbesitz ist, wenn der Down endet, wird das Receiving Team
                mit 10 Metern vom Postscrimmage Kick Enforcement Spot bestraft.
                (b) Safety. Die Regelung ist die gleiche bei einem erfolglosen
                Fieldgoalversuch.
            </p>
        </details>
    </div>
</article>
