src/snapshots/afrotd__parser__tests__interpreation_html_6.5.4_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.4.II
        </p>
    </div>
    <div class="message-body">
        <p>
            B1 zeigt an der 50-Meterlinie einen Fair Catch an und berührt den
            Punt nicht. Während der Ball an der B-45 auf dem Boden rollt,
            benutzt B1 illegal seine Hände bei dem Versuch, an den Ball zu
            gelangen und der Ball wird in Team B’s Besitz für dead erklärt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 10 Meter, Postscrimmage Kick Enforcement. Der Ball
                gehört zu Team B (Regel 10.2.3).
            </p>
        </details>
    </div>
</article>
