src/snapshots/afrotd__parser__tests__interpreation_html_7.1.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach einem Huddle oder Shift kommen alle Team A-Spieler zum
            Stillstand und bleiben für eine Sekunde still stehen. Dann, vor dem
            Snap, wechseln zwei oder mehr gleichzeitig ihre Positionen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Alle elf Team A-Spieler müssen vor dem Snap erneut für eine
                Sekunde still stehen bleiben, andernfalls ist es ein Live Ball
                Foul beim Snap für einen illegalen Shift. Strafe – 5 Meter vom
                Previous Spot (Regel 2.22.1).
            </p>
        </details>
    </div>
</article>
