src/snapshots/afrotd__parser__tests__interpreation_html_7.1.2_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.2.V
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 3 an der B-40. Quarterback A12 befindet sich in einer
            Shotgun Formation und täuscht das Klatschen in die Hände vor, (a)
            während er in Position steht; (b) während er mit den Händen und
            Schultern in übertriebener Art und Weise nach vorn zuckt und den
            Start des Spielzuges vortäuscht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Regel 7.1.2.b.4.c erklärt, dass es ein Fehlstart ist, wenn der
                Quarterback eine schnelle, plötzliche, ruckartige Bewegung
                macht, die den Start des Spielzuges vortäuscht. In (a) kein
                Foul; in (b) Fehlstart durch A12.
            </p>
        </details>
    </div>
</article>
