src/snapshots/afrotd__parser__tests__interpreation_html_7.1.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Snapper A1 hebt den Ball an oder bewegt ihn vorwärts, bevor die
            Rückwärtsbewegung des Snaps beginnt. B2 schlägt den Ball weg, so
            dass er frei wird, wegrollt und von B3 recovert wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A-Foul. Illegaler Snap, Ball bleibt dead. Strafe - 5 Meter
                vom Succeeding Spot (Regel 4.1.1).
            </p>
        </details>
    </div>
</article>
