src/snapshots/afrotd__parser__tests__interpreation_html_7.1.3_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.3.V
        </p>
    </div>
    <div class="message-body">
        <p>
            A66, ein eingeschränkter Lineman zwischen dem Snapper und dem
            Spieler am Ende der Line oder A72, ein eingeschränkter Spieler am
            Ende der Scrimmage Line: 1. hebt eine Hand oder die Hände vom
            Boden, als er von B1, der sich in der neutralen Zone befindet,
            bedroht wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Sofort abpfeifen. Team B Dead Ball Foul, Offside. Strafe – 5
                Meter vom Succeeding Spot. 2. hebt eine Hand oder die Hände vom
                Boden, als B1 a) auf ihn zu stürmt, aber nicht in die neutrale
                Zone eindringt oder b) in die neutrale Zone eindringt, aber
                nicht die Position von A66 oder A72 bedroht. Regelung: In
                beiden Fällen sofort abpfeifen. Team A Dead Ball Fouls. Strafe
                – 5 Meter vom Succeeding Spot. Beachte: Ein Team B-Spieler, der
                vor dem Snap in die neutrale Zone eindringt, kann maximal drei
                Team A-Linemen angreifen. Greift der Team B-Spieler einen
                direkt gegenüberstehenden Team A-Lineman an, gelten dieser Team
                A-Spieler und die beiden rechts und links daneben stehenden
                Linemen als angegriffen. Wenn der Team B-Spieler in die
                neutrale Zone eindringt und die Lücke zwischen zwei Team
                A-Linemen angreift, gelten nur diese beiden Team A-Spieler als
                angegriffen.
            </p>
        </details>
    </div>
</article>
