src/snapshots/afrotd__parser__tests__interpreation_html_7.1.3_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.3.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Vor dem Snap verpasst A80, der kein eingeschränkter innerer Lineman
            oder Back ist, den Snap-Count und macht eine gewöhnliche Bewegung,
            die nicht abrupt, schnell oder ruckartig ist und den Start des
            Spieles nicht vortäuscht. Keiner der Team B-Spieler reagiert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Foul durch Team A.
            </p>
        </details>
    </div>
</article>
