src/snapshots/afrotd__parser__tests__interpreation_html_7.1.4_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.4.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s Formation beim Snap beinhaltet nur 10 Spieler: fünf
            Spieler an der Scrimmage Line, die Trikots mit einer Nummer von 50
            bis 79 tragen, ein Spieler an der Scrimmage Line trägt die Nummer
            82 und vier Spieler sind im Backfield.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Formation ist legal, weil Team A nicht mehr als vier
                Spieler im Backfield hat und die erforderliche Anzahl (fünf) an
                der Scrimmage Line trägt Trikots mit einer Nummer von 50 bis
                79.
            </p>
        </details>
    </div>
</article>
